UtahLiveDataTest/src/objects/r_prog__c.object
<CustomObject>
    <description>This is the object for the FINET program creation</description>
    <fields>
        <fullName>ACT_FL__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALW_BUD_FL__c</fullName>
        <label>Budgeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AREA__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>Populated when programs are submitted to FINET systems for approval</description>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutoGenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <label>Awarded Amount</label>
        <summarizedField>AwardFINETCode__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AwardFINETCode__c.AwardStatus__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </summaryFilterItems>
        <summaryForeignKey>AwardFINETCode__c.ProgramCode__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BILL_AGREE_DT__c</fullName>
        <label>Billing Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BoardEntity__c</fullName>
        <label>Board Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingNumber__c</fullName>
        <label>Building Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFDA__c</fullName>
        <label>CFDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corridor__c</fullName>
        <label>Corridor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beaver County</fullName>
                </value>
                <value>
                    <fullName>Box Elder County</fullName>
                </value>
                <value>
                    <fullName>Cache County</fullName>
                </value>
                <value>
                    <fullName>Carbon County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEPT_CD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the internal account</description>
        <label>DEPT_CD</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>r_prog</relationshipLabel>
        <relationshipName>FINETPrograms9</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>DOC_ID from FINET for this Program</description>
        <externalId>true</externalId>
        <label>FINET DOC ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EFBGN_DT__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFEND_DT__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PROG_CD+DEPT_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAINnumber__c</fullName>
        <label>FAIN number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINETMajorProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FINET Major Program</label>
        <referenceTo>r_mjr_prog__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>FINETPrograms1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Category</label>
        <referenceTo>r_pcat__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>FINETPrograms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Class</label>
        <referenceTo>r_pcls__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>FINETPrograms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Group</label>
        <referenceTo>r_pgrp__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>FINETPrograms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Type</label>
        <referenceTo>r_ptype__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>FINETPrograms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalAidProjectNumber__c</fullName>
        <label>Federal Aid Project Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAwardDate__c</fullName>
        <label>Federal Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalAwardedAmount__c</fullName>
        <label>Federal Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalAwardingAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>r_progs (Account)</relationshipLabel>
        <relationshipName>r_progs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalOldKey__c</fullName>
        <label>Federal Old Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirePhase000__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be used to check when to fire phase 000.</description>
        <label>FirePhase000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FiscalApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FINETPrograms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingInferenceProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Inference Profile</label>
        <referenceTo>R_FPRFL__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>r_progs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Phase__c</fullName>
        <description>Grants API Document Phase</description>
        <label>Grants API Document Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Status__c</fullName>
        <description>Grants API Document Status</description>
        <label>Grants API Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideEditDeleteBtn__c</fullName>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Delete Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotCreated__c</fullName>
        <formula>IF(TEXT(Status__c) != &apos;Created&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighwayFunctionalClass__c</fullName>
        <label>Highway Functional Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndianReservation__c</fullName>
        <label>Indian Reservation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAwardLetterSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAwardLetterSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LN_TYP__c</fullName>
        <description>this field is used when send to FINET. Its being set in the trigger helper class.
LN_TYP = 1 on Insert
LN_TYP = 2 on update</description>
        <label>LN_TYP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegislativeEntity__c</fullName>
        <label>Legislative Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilePostEnd__c</fullName>
        <label>Mile Post End</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MilePostStart__c</fullName>
        <label>Mile Post Start</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NeedsStatusCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag records which need to have their status checked against FINET.</description>
        <label>Needs Status Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldProgramAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will contain the previous program amount to fire the GCAM whenever the program amount is updated.</description>
        <label>Old Program Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROG_CD__c</fullName>
        <label>Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_DSCR__c</fullName>
        <label>PROG_DSCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_NM__c</fullName>
        <label>ProgramName</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_SH_NM__c</fullName>
        <label>Short Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_END_DT__c</fullName>
        <label>PROJ_END_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParcelNumber__c</fullName>
        <label>Parcel Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase000_LN_TYP__c</fullName>
        <description>this field is used when send to FINET. Its being set in the trigger helper class.
LN_TYP = 1 on Insert
LN_TYP = 2 on update</description>
        <label>Phase000_LN_TYP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseStatus__c</fullName>
        <label>PhaseStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Phase</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Historical (Final)</fullName>
                </value>
                <value>
                    <fullName>Conflict Draft</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Program Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FINETPrograms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCFDALookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the look up to new object ProgramCFDA created for USBE to show up on FINET program creation page, which populates CFDA Title field, and to populate the fields on the federal award letter.</description>
        <label>ProgramCFDA</label>
        <referenceTo>ProgramCFDA__c</referenceTo>
        <relationshipLabel>r_progs</relationshipLabel>
        <relationshipName>r_progs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAgreementNumber__c</fullName>
        <label>Project Agreement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REIM_ELG_STA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimb Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReclassExclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclass Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>ProgramAmount__c - AwardedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SACCT_CD__c</fullName>
        <description>FINET DB Name: SACCT_CD</description>
        <label>Sub Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_LOC_CD__c</fullName>
        <description>FINET DB NAME: SITE_LOC_CD</description>
        <label>Site Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSP_STA__c</fullName>
        <description>FINET database field: SUSP_STA</description>
        <label>Reimb Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allowed for Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Suspended for Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryRoadPlan__c</fullName>
        <label>Secondary Road Plan</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateOldKey__c</fullName>
        <label>State Old Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmissionLog__c</fullName>
        <label>Submission Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkDescription__c</fullName>
        <label>Work Description</label>
        <type>TextArea</type>
    </fields>
    <label>r_prog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>r_prog</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>r_progs</pluralLabel>
    <recordTypes>
        <fullName>FINETProgram</fullName>
        <active>true</active>
        <description>Finet program record type</description>
        <label>FINETProgram</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Remaining_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RemainingAmount__c &lt; 0</errorConditionFormula>
        <errorMessage>Remaining Amount cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>